@@ -73,6 +73,7 @@ gnomesword2_SOURCES =  \
     preferences_dialog.c \
     search_dialog.c \
     search_sidebar.c \
+    session.c \
     setup_druid.c \
     sidebar.c \
     sidebar_dialog.c \
